added mathcad 5 file and mathcad 7 file

--- a/todo.org
+++ b/todo.org
@@ -29,7 +29,7 @@ CLOCK: [2021-07-08 Thu 16:10]--[2021-07-08 Thu 18:08]
     Write some documentation on the excel sheet
 ** Project Number
     - Include project number as one of the required fields
-    - Include prject number in the database 
+    - Include project number in the database
 ** Python38.dll
     Create a zip folder with the program, python38.dll, template files
 ** Tooltips
